Trying to deactivate social media

--- a/como-empezar.html
+++ b/como-empezar.html
@@ -10,16 +10,16 @@
 
   <meta property="og:title" content="Let’s code!" />
   <meta property="og:type" content="book" />
-  
-  
-  
-  
+
+
+
+
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Let’s code!" />
-  
-  
-  
+
+
+
 
 
 
@@ -27,8 +27,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  
-  
+
+
 
 
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
@@ -148,8 +148,8 @@ gitbook.require(["gitbook"], function(gitbook) {
 gitbook.start({
 "sharing": {
 "github": false,
-"facebook": true,
-"twitter": true,
+"facebook": false,
+"twitter": false,
 "linkedin": false,
 "weibo": false,
 "instapaper": false,
